--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <body>
     <div>
         <div>
-            <h1 id="Frace">🤔¿A quíen estoy contranando?🤔</h1>
+            <h1 id="Frace">🤔¿A quíen estoy contratando?🤔</h1>
             <hr>
             <img
             src="https://images.vexels.com/media/users/3/210180/isolated/preview/efba87a543ce2aaa98caa05e979924c7-ilustracion-de-portatil-negro.png" id="fotoPc"
