--- a/index.html
+++ b/index.html
@@ -23,50 +23,51 @@
             font-size: 3pc;
         }
         #fotoPc{
-            position: absolute;
+            position: relative;
             width: 25pc;
             height: 25pc;
-            left: 60pc;
-            top: 4.5pc;
+            left: 55pc;
+            top: -5pc;
         }
         #primerParrafo{
-            position: absolute;
+            position: relative;
             display: inline-block;
             vertical-align: middle;
             box-sizing: border-box;
-            size: 1pc;
             font-size: 1.3pc;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            left: 5pc;
+            left: -28pc;
+            top: -20pc;
         }
         #segundoParrafo{
             position: relative;
             font-size: 1.3pc;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-            top: 11.5pc;
+            top: -15pc;
         }
         #zapato{
             position: relative;
-            top: 12pc;
+            top: -15pc;
         }
         #tituloParte2{
             position: relative;
-            top: 11pc;
+            top: -15pc;
         }
         #primerEstudios{
             position: relative;
             top: 10.5pc;
             font-size: medium;
+            top: -15pc;
         }
 
         #idiomasParrafo{
-            position: absolute;
-            right: 30pc;
-            top: 50pc;
+            position: relative;
+            right: -20pc;
+            top: -20pc;
         }
         #fotoIdiomas{
             position: relative;
-            top: 10.5pc;
+            top: -17pc;
             left: 20pc;
             width: 10pc;
         }
@@ -74,14 +75,14 @@
         #imgProyectos{
             width: 5.5pc;
             position: relative;
-            right: 37pc;
-            top: 3pc;
+            right: 30pc;
+            top: -30pc;
         }
         #tituloProyectos{
             font-size: 1.1pc;
             position: relative;
             right: 30pc;
-            top: 2pc;
+            top: -31pc;
         }
         #listaProyectos{
             font-size: small;
@@ -89,10 +90,13 @@
             max-width: 400px;
             position: relative;
             right: 31.5pc;
-            top: 1pc;
+            top: -31.5pc;
         }
     </style>
 
+    <script>
+
+    </script>
 </head>
 <body>
     <div>
